Changelog for Poi
=================

    (name of developer listed in brackets)

Poi branch maurits-inline-response-adding
-----------------------------------------

- Removed skins/Poi/poi_response_update_issue.cpy and related code.
  [maurits]

- Add i18n to browser/response.pt  [maurits]

- Removed button for adding old style response to issue.  [maurits]

- Removed skins/Poi/determineResponseType.py  [maurits]

- Send email when response is added.  [maurits]

- Update SearchableText of issue when response is added.  [maurits]

- Add handling for the target releases field (available only when
  using the PSC tracker).  [maurits]

- Only show options like changing state when the user has permission
  to use them.  [maurits]

- Allow adding and downloading an attachment in a response.  [maurits]

- Store rendered html on the response; remove that after editing.
  Makes views faster.  Basically a memoize variant. [maurits]

- In the creation view, test that a response is valid before adding
  it. [maurits]

- Let unit tests pass on Plone 3.1 by providing an IWorkflowChain
  adapter. [maurits]

- Add migration step for making sure that the Description of all
  PoiIssues in the portal_catalog is of type unicode instead of
  string, just like the real objects. [maurits]

- For the Description of a PoiIssue always return unicode. [maurits]

- Use PersistentList instead of the combination of PersistentMapping
  and self.highest in ResponseContainer.  Works just as well and feels
  easier. [maurits]

- Add first tests for migration of individual issue.
  [maurits]

- Add migration (GenericSetup upgrade step) from old to new style
  responses.
  [maurits]

- Use the text of new style responses too for the SearchableText of an
  issue.
  [maurits]

- No __parent__ and __name__ for PoiIssue anymore.  Instead pass the
  issue as descriptions argument when firing the ObjectModifiedEvent
  for a response.  Works fine and needs no migration.
  [maurits]
